--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
     <header>
         <h1>Shuting Tao</h1>
     </header>
-    <img src="photo.JPG" alt="headshot" style="float:right;width:45%;height:20%;"> 
+    <img src="photo1.JPG" alt="headshot" style="float:right;width:45%;height:20%;"> 
     <p>I'm a junior student at <a href="https://zjui.intl.zju.edu.cn/">Zhejiang University/University of Illinois at Urbana-Champaign Institute</a>. 
     <p>I'm interested in artificial intelligence, machine learning and natural language processing. Recently, my team is working on knowledge graph construction for intelligent maintainance of power plant.
     <p>I am currently working on my bachelor degree of computer engineering . Last fall, I went to UIUC for exchange study for a semester.
-    <p>A version of my CV and transcript can be found <a href="https://drive.google.com/file/d/1ZHcJqn2Ckqu0s0q2YRNuiatlzXP1ESTg/view?usp=sharing">here</a>.
+    <p>A version of my CV and transcript can be found <a href="https://drive.google.com/file/d/16vbL7hEoyxgPXnuPj5l2N9azIEttF8ui/view?usp=sharing">here</a>.
     <br>
     <br>
 
